src/main/java/com/example/JOBSHOP/JOBSHOP/errors/businessException.java
package com.example.JOBSHOP.JOBSHOP.errors;

public class businessException extends RuntimeException{

	public businessException() {
		super();
		// TODO Auto-generated constructor stub
	}

	public businessException(String message) {
		super(message);
		// TODO Auto-generated constructor stub
	}

}
